# mandeye_controller

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  adjust_for_board.diff
.github/workflows/: build-deb.yml  clang-format.yml  sanity-build.yml
3mf/: LivoxCap.3mf  ScannerAssembly.3mf
3rd/Livox-SDK2/: git_log.txt
3rd/Livox-SDK2/include/: livox_lidar_def.h
3rd/Livox-SDK2/sdk_core/: device_manager.cpp  params_check.cpp  parse_cfg_file.cpp
3rd/Livox-SDK2/sdk_core/command_handler/: build_request.cpp  general_command_handler.cpp  mid360_command_handler.cpp
3rd/Livox-SDK2/sdk_core/logger_handler/: file_manager.h
code/: FileSystemClient.cpp  FileSystemClient.h  LivoxClient.cpp  LivoxClient.h  LivoxClientLegacy.cpp  LivoxClientLegacy.h  LivoxTypes.h  button_demo.cpp  compilation_constants.h.in  fake_pps.cpp  gnss.cpp  gnss.h  gpios.cpp  gpios.h  led_demo.cpp  main.cpp  mandeye_utils.h  ouster_client_example.cpp  publisher.cpp  publisher.h  save_data.cpp  save_data.h  save_laz.cpp  save_laz.h  state.h  vn100Client.cpp  vn100Client.h  web_page.h  web_server.cpp  web_server.h
code/gnss/: gnss.cpp  gnss.h  ntrip.cpp  ntrip.h
code/hardware_config/: .mandeye-pro.h.swp  hardware_common.h  mandeye-direct-cm5.h  mandeye-direct-on-rpi5.h  mandeye-pro-cm4-bookworm.h  mandeye-pro-cm4-bullseye.h  mandeye-pro.h  mandeye-standard-rpi4.h  mandeye-standard-rpi5.h  mandeye-standard.h  mandeye-strandard.h  mandeye.h  mandeye_pro.md  mandeye_pro.ucf
code/ir/: optris.cpp  optris.h
code/lidars/: BaseLidarClient.h  LidarImplementation.cpp  LidarImplementations.h
code/lidars/dummy/: ButterLidar.cpp  ButterLidar.h
code/lidars/hesai/: HesaiClient.cpp  HesaiClient.h
code/lidars/livoxsdk2/: LivoxClient.cpp  LivoxClient.h
code/lidars/ouster/: OusterClient.cpp  OusterClient.h  ouster_client_example.cpp
code/lidars/replay/: ReplayLidar.cpp  ReplayLidar.h
code/lidars/ros2/: Ros2Lidar.cpp  Ros2Lidar.h
code/lidars/sick/: SickClient.cpp  SickClient.h  readme.md  sick_client_example.cpp  sick_config.inc.h
code/mcap/: McapWriter.cpp  McapWriter.h  cdr_gold_data.h  cdr_serializer.hpp  gen_cdr_gold.py  test_cdr.cpp
code/utils/: TimeStampProvider.h  TimeStampReceiver.cpp  TimeStampReceiver.h
doc/: BIM.md  appendix_ptp.md  rpi.md
doc/manual/manual_v0_1/: mandeye_dev_manual_v0_1.aux  mandeye_dev_manual_v0_1.tex  mandeye_dev_manual_v0_1.toc
doc/manual/manual_v0_1/TeX_files/: chapter01.aux  chapter01.tex  chapter02.aux  chapter02.tex
doc/manual/manual_v0_2/: main.aux  main.toc  mandeye_dev_manual_v0_2.aux  mandeye_dev_manual_v0_2.out  mandeye_dev_manual_v0_2.tex  mandeye_dev_manual_v0_2.toc
doc/manual/manual_v0_2/TeX_files/: chapter01.aux  chapter01.tex  chapter02.aux  chapter02.tex
doc/wiring/: connections.fzz  wiring.md
extras/: .gitignore  CMakeLists.txt
extras/FakePPS/: CMakeLists.txt  main.cpp
extras/FakePPS/services/: mandeye_fake_pps.service
extras/MurataSpiImu/: CMakeLists.txt  SCH1.c  SCH1.h  config.h  hw.h  hw_spi_dev.c  murataDriver.cpp
extras/MurataSpiImu/services/: mandeye_extra_murata_spi_imu.service
extras/MurataUartImu/: CMakeLists.txt  murataDriver.cpp
extras/MurataUartImu/services/: mandeye_murata_uart_driver.service
extras/SlavePPS/: CMakeLists.txt  README.md  info.md  main.cpp
extras/SlavePPS/services/: mandeye_slave_pps.service
extras/bg51/: README.md  radiation_sensor_driver.py
extras/bg51/services/: mandeye_bg51.service
extras/laz2mcap/: CMakeLists.txt  laz2mcap.cpp
extras/libcamera/: CMakeLists.txt  LibCameraWrapper.cpp  LibCameraWrapper.h  index.html.h  main.cpp  readme.md  start_cameras.sh
extras/libcamera/services/: .postinst.swp  mandeye_libcamera.service  mandeye_libcamera_cam0.service  mandeye_libcamera_cam1.service  postinst
extras/oled_status/: CMakeLists.txt  README.md  mandeye_oled_status.cpp  u8g2_hw_i2c.cpp
extras/oled_status/services/: mandeye_oled_status.service
extras/picamera2/: CMakeLists.txt  README.md  camera.py  ftp_config_server.py
extras/picamera2/services/: mandeye_picamera.service  mandeye_picamera_ftp.service
extras/rtkNmea/: CMakeLists.txt  gnss.cpp  gnss.h  main.cpp  ntrip.cpp  ntrip.h
extras/rtkNmea/rules/: 99-mandeye-ublox.rules
extras/rtkNmea/services/: mandeye_extra_gnss.service
extras/utils/: CMakeLists.txt  ExtrasUtils.cpp  ExtrasUtils.h
extras/zmqDemo/: CMakeLists.txt  README.md  zmqDemo.py
html/: index.htm  jquery-3.6.3.min.js
packing/: check_services.sh  helpers.sh
packing/config/: gm-l2.conf  gm-udp.conf
packing/postinst/: postinst
packing/services/: mandeye_controller.service  mandeye_fake_pps.service  mandeye_phc2sys-gm-eth0.service  mandeye_ptp4l-gm-eth0.service
service/: info.txt  install_service.sh  mandeye_controllel.service  mandeye_controller.service  start_mandeye_controllel.sh  start_mandeye_controller.sh
tests/: nmeaParserPrecisionTest.cpp
tools/: benchmark_append.cpp
